fix: Change text alignment in projects section

--- a/src/css/styles/projects.scss
+++ b/src/css/styles/projects.scss
@@ -64,10 +64,6 @@
       }
     }
 
-    & .card-content {
-      text-align: justify;
-    }
-
     & .card-heading {
       font-size: clamp(0.8rem, 0.3rem + 1.1vw, 3rem);
       font-weight: 900;
